# feplib

./: .gitignore  CMakeLists.txt  README.MD  fep_recv.cpp  fep_recv.vcxproj  fep_send.cpp  fep_send.vcxproj  test.sln
feplib/include/: feplib.h
feplib/lib/x64-Debug/: feplib.lib
